# psr_database

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  codecov.yml  rebuild-debug.bat  rebuild-release.bat
.claude/: settings.local.json
.github/workflows/: ci.yml
bindings/: CMakeLists.txt
bindings/dart/: ffigen.yaml  pubspec.yaml
bindings/dart/lib/: psr_database.dart
bindings/dart/lib/src/: bindings.dart  database.dart  exceptions.dart  result.dart
bindings/dart/test/: database_test.dart  result_test.dart
bindings/julia/: Project.toml
bindings/julia/PsrDatabase/: Project.toml
bindings/julia/PsrDatabase/src/: PsrDatabase.jl
bindings/julia/PsrDatabase/test/: runtests.jl
bindings/julia/revise/: revise.jl
bindings/julia/src/: PSRDatabase.jl
bindings/julia/test/: test.bat  test_create.jl
bindings/julia/test/test_create/: test_create.jl  test_create_scalar_parameter_date.sqlite  test_create_sets_with_relations.sql
bindings/lua/: CMakeLists.txt
bindings/lua/src/: lua_binding.cpp
bindings/python/: CMakeLists.txt  pyproject.toml
bindings/python/psr_database/: __init__.py
bindings/python/src/: module.cpp
bindings/python/tests/: __init__.py  test_database.py  test_result.py
c/: CMakeLists.txt
cmake/: CompilerOptions.cmake  Dependencies.cmake  Platform.cmake  psr_databaseConfig.cmake.in
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt  basic_usage.cpp
examples/dart/: example.dart
examples/julia/: example.jl
examples/lua/: example.lua
examples/python/: example.py
include/psr/: database.h  psr.h  result.h
include/psr/c/: database.h  result.h
include/psr_database/: database.h  export.h  psr_database.h  result.h
src/: CMakeLists.txt  c_api.cpp  database.cpp  result.cpp
src_c/: CMakeLists.txt  psr.h  psr_database.cpp  psr_database.h  psr_database_c.cpp  psr_database_c.h  psr_internal.h  psr_result.cpp  psr_result.h
tests/: CMakeLists.txt  test_c_api.cpp  test_database.cpp  test_database_create.cpp  test_result.cpp
tests/test_create/: test_create_parameters.sql  test_create_parameters_and_vectors.sql  test_create_scalar_parameter_date.sql  test_create_time_series.sql
